syntax = "proto3";

option csharp_namespace = "Gender.GrpcService.DuyVK.Protos";

// ================================================================================
// === Domain Model
// ================================================================================

// ================================================================================
// === Request Object
// ================================================================================

message LoginDuyVKRequest {
	string username = 1;
	string password = 2;
}

// ================================================================================
// === Response Object
// ================================================================================

message LoginDuyVKResponse {
  string token      = 1;
  int64 expires_in  = 2;
}

// ================================================================================
// === Service definition
// ================================================================================

service AuthDuyVKGRPC {
  rpc Login(LoginDuyVKRequest) returns (LoginDuyVKResponse);
}